--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
   <script type='text/javascript' src='d3.min.js'></script>
+  <script type='text/javascript' src='pokemon.js'></script>
   <script type="text/javascript" src="script.js"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -28,20 +29,17 @@
   <div class="row">
     <div class="col-md-4">
       <p>Pokemon 1</p>
-      <form action="submit" id="pokemonA">
-        <input type='text'>
-        </input>
-      </form>
+      <input id='pokemonA' list="pokemonList" name="myBrowser" />
+      <datalist id="pokemonList">
+      </datalist>
     </div>
     <div class="col-md-4">
       <h1>VS</h1>
     </div>
     <div class="col-md-4">
       <p>Pokemon 2</p>
-      <form action="submit" id="pokemonB">
-        <input type='text'>
-        </input>
-      </form>
+      <input id='pokemonB' list="pokemonList" name="myBrowser" />
+
     </div>
   </div>
   <div class="row display">
