double bar graph made

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="col-md-4 statsA">
       
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4" id="barChart">
       
     </div>
     <div class="col-md-4 statsB">
