--- a/index.html
+++ b/index.html
@@ -19,17 +19,10 @@
   <title>Pokemon Comparison</title>
 </head>
 <body>
-<br>
-<!-- <nav class="navbar navbar-inverse">
-  <ul class="nav navbar-nav">
-    <li class="active"><a href="#">Pokemon Comparison <span class="sr-only">(current)</span></a></li>
-    <li><a href="#">Pokemon Category</a></li>
-  </ul>
-</nav> -->
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-4 input">
-      <input id='pokemonA' list="pokemonList" name="myBrowser" placeholder="Pokemon 1" />
+      <input id='pokemonA' list="pokemonList" name="myBrowser" placeholder="Choose Pokemon!" />
       <datalist id="pokemonList">
       </datalist>
     </div>
@@ -38,7 +31,7 @@
       <hr>
     </div>
     <div class="col-xs-4 input">
-      <input id='pokemonB' list="pokemonList" name="myBrowser" placeholder="Pokemon 2"/>
+      <input id='pokemonB' list="pokemonList" name="myBrowser" placeholder="Choose Pokemon!"/>
     </div>
   </div>
   <br>
@@ -46,7 +39,7 @@
     <div class="col-xs-4">
       <div id="spriteA">
         <p class="name"></p>
-        <img src="">
+        <img src="loading.gif">
       </div>
     </div>
     <div class="col-xs-4" id="radarChart">
@@ -54,7 +47,7 @@
     <div class="col-xs-4">
       <div id="spriteB">
         <p class="name"></p>
-        <img src="">
+        <img src="loading.gif">
       </div>
     </div>
   </div>
