--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   
   <!-- United Bootswatch theme -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css" rel="stylesheet" integ rity="sha384-0UBL8wxZ28kqJ8w8N8RUV0odBG5w8D/Y+rb+o7hr2F3dS9twlAE8S7VUtVSRe5cc" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css" rel="stylesheet" integrity="sha384-0UBL8wxZ28kqJ8w8N8RUV0odBG5w8D/Y+rb+o7hr2F3dS9twlAE8S7VUtVSRe5cc" crossorigin="anonymous">
   
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -38,8 +38,8 @@
     <div class="col-xs-4">
       <div id="spriteA">
         <p class="name"></p>
-        <img src="loading.gif">
-        <p class="type"></p>
+        <img src="loading.gif" alt="pokemonA">
+        <p class="type lead"></p>
       </div>
     </div>
     <div class="col-xs-4" id="radarChart">
@@ -47,8 +47,8 @@
     <div class="col-xs-4">
       <div id="spriteB">
         <p class="name"></p>
-        <img src="loading.gif">
-        <p class="type"></p>
+        <img src="loading.gif" alt="pokemonB">
+        <p class="type lead"></p>
       </div>
     </div>
   </div>
