--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
-  <script type='text/javascript' src='d3.min.js'></script>
-  <script type='text/javascript' src='pokemon.js'></script>
+  <script type='text/javascript' src='assets/scripts/d3.min.js'></script>
+  <script type='text/javascript' src='assets/scripts/pokemon.js'></script>
   <script type="text/javascript" src="script.js"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -14,7 +14,8 @@
   
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/stylesheets/style.css">
+  <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
   <title>Pokemon Comparison</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
     </div>
     <div class="col-xs-4">
       <h2>Pokemon Stats Visualizer</h2>
-      <hr>
+      <button id='randomize' class='btn btn-sm btn-success'>Randomize!</button>
     </div>
     <div class="col-xs-4 input">
       <input id='pokemonB' list="pokemonList" name="myBrowser" placeholder="Choose Pokemon!"/>
