--- a/index.html
+++ b/index.html
@@ -1,73 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
-  <script type='text/javascript' src='assets/scripts/d3.min.js'></script>
-  <script type='text/javascript' src='assets/scripts/pokemon.js'></script>
-  <script type="text/javascript" src="script.js"></script>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  
-  <!-- United Bootswatch theme -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css" rel="stylesheet" integrity="sha384-0UBL8wxZ28kqJ8w8N8RUV0odBG5w8D/Y+rb+o7hr2F3dS9twlAE8S7VUtVSRe5cc" crossorigin="anonymous">
-  
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/stylesheets/style.css">
-  <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
-  <title>Pokemon Comparison</title>
-</head>
-<body>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-4 input">
-      <input id='pokemonA' list="pokemonList" name="myBrowser" placeholder="Choose Pokemon!" />
-      <datalist id="pokemonList">
-      </datalist>
-    </div>
-    <div class="col-xs-4">
-      <h2>Pokemon Stats Visualizer</h2>
-      <button id='randomize' class='btn btn-sm btn-success'>Randomize!</button>
-    </div>
-    <div class="col-xs-4 input">
-      <input id='pokemonB' list="pokemonList" name="myBrowser" placeholder="Choose Pokemon!"/>
-    </div>
-  </div>
-  <br>
-  <div class="row display">
-    <div class="col-xs-4">
-      <div id="spriteA">
-        <p class="name"></p>
-        <img src="loading.gif" alt="pokemonA">
-        <p class="type lead"></p>
+  <head>
+    <meta charset="UTF-8" />
+    <script
+      type="text/javascript"
+      src="http://code.jquery.com/jquery-2.2.1.min.js"
+    ></script>
+    <script type="text/javascript" src="assets/scripts/d3.min.js"></script>
+    <script type="text/javascript" src="assets/scripts/pokemon.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+      crossorigin="anonymous"
+    />
+
+    <!-- United Bootswatch theme -->
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0UBL8wxZ28kqJ8w8N8RUV0odBG5w8D/Y+rb+o7hr2F3dS9twlAE8S7VUtVSRe5cc"
+      crossorigin="anonymous"
+    />
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+      integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="assets/stylesheets/style.css" />
+    <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
+    <title>Pokemon Comparison</title>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-4 input">
+          <input
+            id="pokemonA"
+            list="pokemonList"
+            name="myBrowser"
+            placeholder="Choose Pokemon!"
+          />
+          <datalist id="pokemonList"> </datalist>
+        </div>
+        <div class="col-xs-4">
+          <h2>Pokemon Stats Visualizer</h2>
+          <button id="randomize" class="btn btn-sm btn-success">
+            Randomize!
+          </button>
+        </div>
+        <div class="col-xs-4 input">
+          <input
+            id="pokemonB"
+            list="pokemonList"
+            name="myBrowser"
+            placeholder="Choose Pokemon!"
+          />
+        </div>
+      </div>
+      <br />
+      <div class="row display">
+        <div class="col-xs-4">
+          <div id="spriteA">
+            <p class="name"></p>
+            <img alt="pokemonA" />
+            <p class="type lead"></p>
+          </div>
+        </div>
+        <div class="col-xs-4" id="radarChart"></div>
+        <div class="col-xs-4">
+          <div id="spriteB">
+            <p class="name"></p>
+            <img alt="pokemonB" />
+            <p class="type lead"></p>
+          </div>
+        </div>
+      </div>
+      <div class="row detail">
+        <div class="col-xs-4 statsA">
+          <br />
+          <h4>Battle Score</h4>
+          <h1 id="scoreA">0</h1>
+        </div>
+        <div class="col-xs-4" id="barChart"></div>
+        <div class="col-xs-4 statsB">
+          <br />
+          <h4>Battle Score</h4>
+          <h1 id="scoreB">0</h1>
+        </div>
       </div>
     </div>
-    <div class="col-xs-4" id="radarChart">
-    </div>
-    <div class="col-xs-4">
-      <div id="spriteB">
-        <p class="name"></p>
-        <img src="loading.gif" alt="pokemonB">
-        <p class="type lead"></p>
-      </div>
-    </div>
-  </div>
-  <div class="row detail">
-    <div class="col-xs-4 statsA">
-    <br>  
-      <h4>Battle Score</h4>
-      <h1 id="scoreA">0</h1>
-    </div>
-    <div class="col-xs-4" id="barChart">    
-    </div>
-    <div class="col-xs-4 statsB">
-    <br>
-      <h4>Battle Score</h4>
-      <h1 id="scoreB">0</h1>
-    </div> 
-  </div>
-</div>
-<br>
-</body>
+    <br />
+  </body>
 </html>
